# peft-ser

./: README.md  enviroment.yml  peft-ser.yml
config/: config.py  config.yml
dataloader/: dataloader.py
experiment/: evaluation.py  finetune_emotion.py  finetune_emotion_adapter.sh  finetune_emotion_adapter_l.sh  finetune_emotion_combined.sh  finetune_emotion_embedding.sh  finetune_emotion_ft.sh  finetune_emotion_lora.sh  finetune_single_thread.py  run_finetune.sh  trainable_parameters.py
model/: adapter.py  downstream_models.py  mel_filters.npz  pretrained_backbones.py  wav2vec.py  wavlm_plus.py  whisper.py
package/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
package/peft_ser/: __init__.py  example.py
package/peft_ser/model/: mms.py  wav2vec.py  wavlm_large.py  wavlm_plus.py  whisper.py
preprocess_audio/: preprocess_audio.py  preprocess_noise_audio.py
train_split_gen/: crema-d.py  emov_db.py  iemocap.py  meld.py  msp-improv.py  msp-podcast.py  ravdess.py  run.sh
utils/: utils.py
